# job-hunter

./: .env.example  .gitignore  README.md  pyproject.toml
data/personas/: _template.yaml  example.yaml  paolo.yaml
docs/: GUIDE.md
src/job_hunter/: __init__.py  __main__.py  cache.py  cli.py  locations.py  models.py  pagefetch.py  pipeline.py  profile.py  recency.py  reputation.py  storage.py  tiers.py
src/job_hunter/phases/: __init__.py  collect.py  enrich.py  rank.py
src/job_hunter/providers/: __init__.py  adzuna.py  arbeitnow.py  ats.py  base.py  jobicy.py  remoteok.py  themuse.py
src/job_hunter/scoring/: __init__.py  features.py  heuristic.py  llm.py
src/job_hunter/web/: __init__.py  app.py
src/job_hunter/web/templates/: index.html
tests/: test_ai_worthy.py  test_cache.py  test_collect.py  test_enrich_cache.py  test_features.py  test_infer_country.py  test_llm_apply.py  test_locations.py  test_profile.py  test_rank.py  test_recency.py  test_scoring.py  test_tiers.py  test_web.py
